--- a/pythonProject14/myshop/shop/templates/shop/cart.html
+++ b/pythonProject14/myshop/shop/templates/shop/cart.html
@@ -18,10 +18,25 @@
         {% for item in cart_items %}
             <div class="cart-item">
                 <h2>{{ item.product.name }}</h2>
-                <p>Quantity: {{ item.quantity }}</p>
+                <p>Количество:  {{ item.quantity }}</p>
             </div>
+        {% for item in cart_items %}
+<div class="cart-item" id="cart-item-{{ item.id }}">
+    <div class="product-details">
+        <h4>{{ item.product.name }}</h4>
+        <p>{{ item.quantity }} x {{ item.product.price }}</p>
+    </div>
+    <form method="post" action="{% url 'remove_from_cart' item.id %}">
+        {% csrf_token %}
+        <button type="submit" class="remove-item">
+            &#10005; <!-- X icon -->
+        </button>
+    </form>
+</div>
+{% endfor %}
         {% endfor %}
     </div>
 </body>
 </html>
+
 {% endblock %}
