Добавил стили для верхней панели

--- a/pythonProject14/myshop/shop/templates/shop/base.html
+++ b/pythonProject14/myshop/shop/templates/shop/base.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="{% url 'home_page' %}">Домашняя страница</a>
            <a href="{% url 'cart_view' %}">Корзина ({{ total_items }})</a>
-           <a href="{% url 'register' %}">Регистрация</a>
+           <a href="{% url 'register' %}">Регистрация/вход</a>
 
         </nav>
 
