--- a/pythonProject14/myshop/shop/static/shop/css/styles.css
+++ b/pythonProject14/myshop/shop/static/shop/css/styles.css
@@ -1,7 +1,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url('C:\Users\Олег\Desktop\osnova');
+    background-image: url('../images/background.jpg');
     background-size: cover;
     margin: 0;
     padding: 20px;
@@ -56,7 +56,7 @@ header {
 
 nav {
     position: absolute;
-    top: 1px;
+    top: -25px;
     left: 5px;
 }
 nav a {
@@ -64,11 +64,11 @@ nav a {
     text-decoration: none;
     font-size: 18px;
     font-family: Arial, sans-serif;
-    padding: 10px 15px;
-    margin-right: 10px;
+    padding: 10px 10px;
+    margin-right: 5px;
     background-color: transparent;
-    border-radius: 5px;
-    transition: color 0.9s ease, background-color 0.3s ease;
+    border-radius: 50px;
+    transition: color 1.5s ease, background-color 0.8s ease;
     cursor: pointer;
 }
 
@@ -288,3 +288,28 @@ nav a:active, nav a:visited {
     margin-bottom: 15px;
 }
 
+.login-container .form-group label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.login-container .form-group input {
+    width: 250px; /* Уменьшенная ширина поля ввода */
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.btn {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #0056b3;
+}
