--- a/pythonProject14/myshop/shop/templates/shop/login.html
+++ b/pythonProject14/myshop/shop/templates/shop/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/static/shop/css/styles.css">
 </head>
 <body>
+
     <header>
         <div class="header-container">
             <h1 class="header-title">Магазин видеокарт</h1>
@@ -22,7 +23,7 @@
         <div class="login-container">
             <h1>Вход в систему</h1>
             <form method="post">
-                <input type="hidden" name="csrfmiddlewaretoken" value="QBUDJBmcX1ddXQ1vwK4w78FQICCuSvutlDGD0DRKzX7tKFE3BNxby5kD8bVAEdPS">
+                {% csrf_token %}
                 <div class="form-group">
                     <label for="id_username">Имя пользователя:</label>
                     <input type="text" name="username" autofocus autocapitalize="none" autocomplete="username" maxlength="150" required id="id_username">
@@ -38,9 +39,5 @@
             </div>
         </div>
     </div>
-
-    <footer>
-        <p>&copy; 2024 TopShop</p>
-    </footer>
 </body>
 </html>
