--- a/pythonProject14/myshop/shop/templates/shop/product_list.html
+++ b/pythonProject14/myshop/shop/templates/shop/product_list.html
@@ -19,7 +19,7 @@
                 <img src="{{ product.image.url }}" alt="{{ product.name }}">
                 <h2>{{ product.name }}</h2>
                 <p>{{ product.description }}</p>
-                <p>Цена: Руб. {{ product.price }}</p>
+                <p>Цена: {{ product.price }} Руб. </p>
                 <a href="{% url 'add_to_cart' product.id %}" class="btn">Добавить в корзину</a>
             </div>
         {% endfor %}
