--- a/pythonProject14/myshop/shop/templates/shop/product_list.html
+++ b/pythonProject14/myshop/shop/templates/shop/product_list.html
@@ -20,7 +20,10 @@
                 <h2>{{ product.name }}</h2>
                 <p>{{ product.description }}</p>
                 <p>Цена: {{ product.price }} Руб. </p>
-                <a href="{% url 'add_to_cart' product.id %}" class="btn">Добавить в корзину</a>
+                <div class="btn-group">
+                <a href="{% url 'add_to_cart' product.id %}" class="btn btn-secondary">Добавить в корзину</a>
+                <button class="btn btn-secondary" type="button">Подробнее</button>
+            </div>
             </div>
         {% endfor %}
     </div>
